<resources>
    <string name="app_name">Finger Paint</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="shapes">Shapes</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="tri">Triangle</string>
    <string name="multiTouch">Multi Touch</string>
    <string name="gesture">Gesture</string>
    <string name="pinch">Pinch</string>
    <string name="multiGesture">Multi Gesture</string>
    <string name="edit_message">Name your drawing</string>
    <string name="button_send">Send</string>
    <string name="view">View</string>
</resources>
